# trammel

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  trammel.toml
.github/workflows/: ci.yml
crates/trammel/: Cargo.toml
crates/trammel-attrs/: Cargo.toml
crates/trammel-attrs/src/: lib.rs
crates/trammel/src/: layers.rs  lib.rs  main.rs  violations.rs  visitor.rs
crates/trammel/src/config/: mod.rs  schema.rs
crates/trammel/src/glob/: fs_path.rs  ident.rs  import_path.rs  mod.rs
crates/trammel/src/rules/: file_content_scan.rs  forbidden_imports.rs  forbidden_inline_paths.rs  forbidden_macros.rs  forbidden_methods.rs  fs_layout.rs  mod.rs  n_plus_one.rs  path_string.rs  required_struct_attrs.rs  use_tree.rs
crates/trammel/tests/: cli.rs  config_parse.rs  fs_rules.rs  rules.rs  run.rs
crates/trammel/tests/fixtures/config/: full.toml
docs/: 2026-04-27-trammel-design.md  2026-04-27-trammel-implementation.md
examples/: trammel.toml
