[package]
name = "trammel"
description = "Config-driven architectural conformance tool for Rust workspaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["lint", "architecture", "conformance"]
categories = ["development-tools"]

[lib]
name = "trammel"
path = "src/lib.rs"

[[bin]]
name = "trammel"
path = "src/main.rs"

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
walkdir.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile.workspace = true
